--- a/style.css
+++ b/style.css
@@ -6,17 +6,41 @@ body {
     font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
 }
 
+a {
+    text-decoration: none;
+    color: black;
+}
+
+p {
+    margin: 0;
+    padding: 0;
+}
+
+button {
+    background-color: #3882F6;
+    color: white;
+    padding: 8px 24px;
+    border: none;
+    border-radius: 4px;
+}
+
 /* Header */
 
 .header {
-    display: flex;
     background-color: plum;
+    justify-content: center;
+    align-items: center;
+    padding: 0 50px;
+}
+
+.top {
+    display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 8px;
 }
 
-.header img {
+.logo-img {
     height: 40px;
     margin: 0;
     padding: 0;
@@ -30,7 +54,35 @@ body {
     gap: 16px;
 }
 
-a {
-    text-decoration: none;
+.bottom {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 24px;
+    margin: 50px 0;
+}
+
+.title-text {
+    font-size: 48px;
+    font-weight: bolder;
     color: black;
-  }
+}
+
+.subtitle-text {
+    font-size: 18;
+    color: darkslategray;
+    margin-bottom: 8px;
+}
+
+.header .bottom .left {
+    flex: 1;
+}
+
+.header .bottom .right {
+    flex: 0 0 auto;
+}
+
+.header .bottom img {
+    width: 300px;
+    border-radius: 8px;
+}
