--- a/style.css
+++ b/style.css
@@ -42,8 +42,6 @@ button {
 
 .logo-img {
     height: 40px;
-    margin: 0;
-    padding: 0;
 }
 
 .header-links{
@@ -85,4 +83,31 @@ button {
 .header .bottom img {
     width: 300px;
     border-radius: 8px;
+}
+
+/* Information */
+
+.info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 32px;
+    margin: 32px;
+}
+
+.info-title {
+    font-size: 32px;
+    font-weight: bold;
+}
+
+.items {
+    display: flex;
+    gap: 32px;
+    text-align: center;
+}
+
+.item img {
+    border-radius: 12px;
+    border: 5px solid lightblue;
+    margin-bottom: 10px;
 }
