--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ button {
     color: white;
     padding: 8px 24px;
     border: none;
-    border-radius: 4px;
+    border-radius: 8px;
 }
 
 /* Header */
@@ -132,4 +132,35 @@ button {
     font-size: 24px;
     font-weight: bolder;
     align-self: flex-end;
+}
+
+/* Sign Up */
+
+.signup {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 100px 100px;
+    background-color: plum;
+    border-radius: 8px;
+    padding: 40px 80px;
+    gap: 12px
+}
+
+.signup button {
+    border: 2px white solid;
+}
+
+.signup-text-title {
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.signup-text-subtitle {
+    font-size: 18px;
+}
+
+.signup-button {
+    font-size: 18px;
+    flex: none;
 }
