--- a/style.css
+++ b/style.css
@@ -116,7 +116,12 @@ button:hover {
 .item img {
     border-radius: 12px;
     border: 5px solid lightblue;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
+    transition: .2s;
+}
+
+.item img:hover {
+    transform: scale(1.2);
 }
 
 /* Quote */
